--- a/css/ship.css
+++ b/css/ship.css
@@ -1,16 +1,16 @@
 table.wikitable {
     margin: 1em 0;
-    background-color: #f9f9f9;
+    background-color: #3b434e;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #aaaaaa;
+	border-color: #515c6b;
     border-collapse: collapse;
-    color: black;
+    color: #ffffff;
 }
 table.wikitable td {
 	border-style: solid;
 	border-width: 1px;
-	border-color: #aaaaaa;
+	border-color: #515c6b;
     border-collapse: collapse;
 }
 .leftCol {
