ship.html 1.0 essex.json 0.3

--- a/css/ship.css
+++ b/css/ship.css
@@ -17,3 +17,8 @@ table.wikitable td {
     float: left;
     width: 50%;
 }
+.rightCol {
+    float: left;
+    width: calc(50% - 10px);
+    margin-left: 10px;
+}
