--- a/css/ship.css
+++ b/css/ship.css
@@ -24,7 +24,7 @@ table.wikitable td {
 }
 
 
-@media (max-width: 1023px) {
+@media screen and (max-width: 1279px) {
 	table.wikitable {
 		height: 450px;
 	}
