ship.html 1.3 ship.css 0.2

--- a/css/ship.css
+++ b/css/ship.css
@@ -6,6 +6,7 @@ table.wikitable {
 	border-color: #515c6b;
     border-collapse: collapse;
     color: #ffffff;
+	height: 400px;
 }
 table.wikitable td {
 	border-style: solid;
