--- a/css/ship.css
+++ b/css/ship.css
@@ -60,12 +60,16 @@ table.wikitablewide td {
 	left: 0;
 	right: 0;
 	background-color: #262f3b;
+	opacity: 0.75;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	transition: .5s ease;
 }
 .btnContainer:hover .btnOverlay {
+	width: 0%;
+}
+.activeButton {
 	width: 0%;
 }
 
