--- a/css/ship.css
+++ b/css/ship.css
@@ -61,11 +61,12 @@ table.wikitablewide td {
 	left: 0;
 	right: 0;
 	background-color: #262f3b;
-	opacity: 0.75;
+	opacity: 0.85;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	transition: .3s ease;
+	cursor: pointer;
 }
 .btnContainer:hover .btnOverlay {
 	width: 0%;
