--- a/css/ship.css
+++ b/css/ship.css
@@ -74,6 +74,22 @@ table.wikitablewide td {
 .activeButton {
 	width: 0%;
 }
+.btnExpr {
+	float: left;
+	width: 64px;
+	height: 64px;
+	border-radius: 5px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	cursor: pointer;  
+}
+.btnExpr:hover {	
+	box-shadow: 0px 0px 10px white;
+}
+.btnExprActive {
+	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
+}
 
 
 
