--- a/css/ship.css
+++ b/css/ship.css
@@ -14,6 +14,21 @@ table.wikitable td {
 	border-color: #515c6b;
     border-collapse: collapse;
 }
+table.wikitable-a {
+    margin: 1em 0;
+    background-color: #3b434e;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #515c6b;
+    border-collapse: collapse;
+    color: #ffffff;
+}
+table.wikitable-a td {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #515c6b;
+    border-collapse: collapse;
+}
 table.wikitablewide {
 	margin: 1em 0;
     background-color: #3b434e;
