--- a/css/ship.css
+++ b/css/ship.css
@@ -15,7 +15,7 @@ table.wikitable td {
     border-collapse: collapse;
 }
 table.wikitable-a {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
     background-color: #3b434e;
 	border-style: solid;
 	border-width: 1px;
