--- a/css/ship.css
+++ b/css/ship.css
@@ -102,8 +102,20 @@ table.wikitablewide td {
 .btnExpr:hover {	
 	box-shadow: 0px 0px 10px white;
 }
+.btnExpr:active {	
+	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
+}
 .btnExprActive {
 	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
+}
+.btnGeneric {
+	float: left;
+	height: 30px;
+	border-radius: 2.5px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	cursor: pointer;  
 }
 
 
