--- a/css/ship.css
+++ b/css/ship.css
@@ -106,6 +106,14 @@ table.wikitablewide td {
 	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
 }
 .btnExprActive {
+	float: left;
+	width: 64px;
+	height: 64px;
+	border-radius: 5px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	cursor: pointer; 
 	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
 }
 .btnGeneric {
