--- a/css/ship.css
+++ b/css/ship.css
@@ -118,6 +118,7 @@ table.wikitablewide td {
 }
 .btnGeneric {	
 	float: left;
+	display: table;
 	height: 1px;
     width: 1px;
 	margin-left: 10px;
