--- a/css/ship.css
+++ b/css/ship.css
@@ -126,14 +126,15 @@ table.wikitablewide td {
 	margin-bottom: 10px;
 }
 .btnGenericText {
+	white-space: nowrap;
 	height: 35px;
     text-align: center;
     vertical-align: middle;
     display: table-cell;
-    background-color:#262f3b;    
+    background-color:#262f3b;  
+    border-style:solid;  
 	border-radius: 5px;
     border-color:gray;
-    border-style:solid;
     border-width:1px;
 	cursor: pointer;  
     padding: 0px 15px 0px 15px;
@@ -147,14 +148,15 @@ table.wikitablewide td {
 	box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
 }
 .btnGenericTextActive{
+	white-space: nowrap;
 	height: 35px;
     text-align: center;
     vertical-align: middle;
     display: table-cell;
-    background-color:#262f3b;    
+    background-color:#262f3b; 
+    border-style:solid;   
 	border-radius: 5px;
     border-color:gray;
-    border-style:solid;
     border-width:1px;
 	cursor: pointer;  
     padding: 0px 15px 0px 15px;
