--- a/css/ship.css
+++ b/css/ship.css
@@ -152,14 +152,14 @@ table.wikitablewide td {
     text-align: center;
     vertical-align: middle;
     display: table-cell;
-    background-color:#262f3b; 
+    background-color:white; 
     border-style:solid;   
     border-color:gray;
     border-width:1px;
 	cursor: pointer;  
     padding: 0px 15px 0px 15px;
     font-size: 20;
-    color:white;
+    color:#262f3b;
     box-shadow: 1px 1px 4px white, -1px 1px 4px white, 1px -1px 4px white, -1px -1px 4px white;
 }
 
