--- a/css/ship.css
+++ b/css/ship.css
@@ -22,6 +22,7 @@ table.wikitable-a {
 	border-color: #515c6b;
     border-collapse: collapse;
     color: #ffffff;
+	height: 600px;
 }
 table.wikitable-a td {
 	border-style: solid;
