ship.css / patchnotes.css

--- a/css/patchnotes.css
+++ b/css/patchnotes.css
@@ -4,7 +4,7 @@
 	overflow:auto;
 }
 .noteDiv {
-	background-color:#3b434e;
+	background-color:#373743;
 	color:#ffffff;
 	padding:15px;
 	margin-top:20px;
