--- a/css/ship.css
+++ b/css/ship.css
@@ -1,6 +1,6 @@
 table.wikitable {
     margin: 1em 0;
-    background-color: #24252d;
+    background-color: #373743;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #515c6b;
@@ -16,7 +16,7 @@ table.wikitable td {
 }
 table.wikitable-a {
     margin: 0 0 1em 0;
-    background-color: #24252d;
+    background-color: #373743;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #515c6b;
@@ -32,7 +32,7 @@ table.wikitable-a td {
 }
 table.wikitablewide {
 	margin: 1em 0;
-    background-color: #24252d;
+    background-color: #373743;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #515c6b;
