--- a/css/shiplist.css
+++ b/css/shiplist.css
@@ -1,7 +1,7 @@
 .maindiv {
   border-radius: 10px;
   border: 3px double #ffffff;
-  background: #262f3b;
+  background: #24252d;
   width: 106px;
   height: 176px;
   float:left;
@@ -42,16 +42,16 @@
 }
 table.wikitablewide {
 	margin: 1em 0;
-    background-color: #3b434e;
+    background-color: #373743;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #515c6b;
+	border-color: #5c5d70;
     border-collapse: collapse;
     color: #ffffff;
 }
 table.wikitablewide td {
 	border-style: solid;
 	border-width: 1px;
-	border-color: #515c6b;
+	border-color: #5c5d70;
     border-collapse: collapse;
 }
