--- a/css/patchnotes.css
+++ b/css/patchnotes.css
@@ -3,9 +3,24 @@
     width: 100%;
 	overflow:auto;
 }
-.noteDiv {
-	background-color:#373743;
-	color:#ffffff;
-	padding:15px;
-	margin-top:20px;
+table.wikitablewide {
+	margin: 1em 0;
+    background-color: #373743;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #5c5d70;
+    border-collapse: collapse;
+    color: #ffffff;
+}
+table.wikitablewide td {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #5c5d70;
+    border-collapse: collapse;
+}
+.tableOfContents{
+	float:right;
+}
+.mainContent{
+	float:left;
 }
