--- a/css/storylist.css
+++ b/css/storylist.css
@@ -14,9 +14,9 @@ table.wikitablewide td {
     border-collapse: collapse;
 }
 .mainBG {
-    background-image: url('https://i.imgur.com/jH41gYE.png');
+    background-image: url('https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/story_main_folder.png');
     width:198px;
-    height:125px;
+    height:147px;
     float:left;
     margin-left: 10px;
     margin-top:10px;
@@ -24,11 +24,26 @@ table.wikitablewide td {
 .mainTextChapCount {
 	color:gray;
     padding-left:140px;
-    padding-top:3px;
+    padding-top:25px;
 }
 .mainTextTitle {
 	color:white;
     padding-left:25px;
     padding-top:70px;    
     font-size:14px;
+}
+.eventBG {
+    background-image: url('https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/story_event_folder.png');
+    width:198px;
+    height:147px;
+    float:left;
+    margin-left: 10px;
+    margin-top:10px;
+}
+.charBG {
+    width:198px;
+    height:147px;
+    float:left;
+    margin-left: 10px;
+    margin-top:10px;
 }
