--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -133,8 +133,7 @@ a:focus {
     background: #6e6f87;
 }
 
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
+#sidebar ul li.active>a {
     color: #fff;
     background: #9394b4;
 }
