reverted to cloudfront after loops

--- a/css/storylist.css
+++ b/css/storylist.css
@@ -14,7 +14,7 @@ table.wikitablewide td {
     border-collapse: collapse;
 }
 .mainBG {
-    background-image: url('https://media.alg-wiki.com/General/story_main_folder.png');
+    background-image: url('https://deo68x5sknl6a.cloudfront.net/General/story_main_folder.png');
     width:198px;
     height:147px;
     float:left;
@@ -33,7 +33,7 @@ table.wikitablewide td {
     font-size:14px;
 }
 .eventBG {
-    background-image: url('https://media.alg-wiki.com/General/story_event_folder.png');
+    background-image: url('https://deo68x5sknl6a.cloudfront.net/General/story_event_folder.png');
     width:198px;
     height:147px;
     float:left;
